2014-07-20  Eric Botcazou  <ebotcazou@adacore.com>

	* expr.c (store_field): Handle VOIDmode for calls that return values
	in multiple locations.

2014-07-20  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* config/rs6000/altivec.md (unspec enum):  Fix typo in
	UNSPEC_VSLDOI.
	(altivec_vsldoi_<mode>): Likewise.

2014-07-20  Roman Gareev  <gareevroman@gmail.com>

	* graphite-isl-ast-to-gimple.c:
	Fixes a formatting issue related to the number of characters in the
	line.

2014-07-20  Roman Gareev  <gareevroman@gmail.com>

	* graphite-isl-ast-to-gimple.c:
	Add using of build_nonstandard_integer_type instead of
	int128_integer_type_node

2014-07-19  Eric Botcazou  <ebotcazou@adacore.com>

	* toplev.c (output_stack_usage): Adjust the location of the warning.

2014-07-19  Daniel Cederman  <cederman@gaisler.com>

	* config/sparc/sync.md (*membar_storeload_leon3): New insn.
	(*membar_storeload): Disable for LEON3.

2014-07-18  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR rtl-optimization/61461
	* sched-vis.c (print_pattern) <ADDR_VEC, ADDR_DIFF_VEC>: Fixed.

2014-07-18  Uros Bizjak  <ubizjak@gmail.com>

	PR target/61794
	* config/i386/sse.md (avx512f_vextract<shuffletype>32x4_1_maskm):
	Fix instruction constraint.
	(<mask_codefor>avx512f_vextract<shuffletype>32x4_1<mask_name>): Ditto.

2014-07-18  Jonathan Wakely  <jwakely@redhat.com>

	* doc/extend.texi (Template Instantiation): Remove stray parenthesis.

2014-07-18  Chung-Ju Wu  <jasonwucj@gmail.com>

	* config/nds32/nds32.c (nds32_can_eliminate): Follow the
	GNU coding standards.
	(nds32_register_move_cost): Likewise.
	(nds32_memory_move_cost): Likewise.
	(nds32_address_cost): Likewise.

2014-07-18  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* config/mmix/mmix.c (mmix_intval): Drop unused automatic variable.

2014-07-17  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa-linux.h (TARGET_OS_CPP_BUILTINS): Remove defines for
	__GCC_HAVE_SYNC_COMPARE_AND_SWAP_1, __GCC_HAVE_SYNC_COMPARE_AND_SWAP_2